src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

p.card-text > * {
  border: solid 1px red;
  word-break: break-all;
}

/* non-wrapping preformatted text breaks the layout when sidebar is present */
div.card-text > pre {
  /* display: none; */
  /* max-width: 510px; */
  text-wrap: wrap;
}
/* 
div.card-text > pre > code {
  border: solid 2px green;
  font-size: 80%;
  word-break: break-all;
} */

/* overflowing Nav.Link items word-break */
.accordion-body .nav-link {
  word-break: break-all;
  font-size: 80%;
}

